# gmr

./: .coveragerc  .gitignore  .travis.yml  CITATION.cff  LICENSE  MANIFEST.in  README  README.md  README.rst  README.txt  gmm.html  gmm.py  index.html  multivariate_normal.py  mvn.html  pyproject.toml  regression.py  setup.cfg  setup.py  sklearn.html  utils.html
.github/workflows/: python-package.yml
doc/: apidoc.md
examples/: examples-with-gmr.ipynb  plot_confidence_interval.py  plot_estimate_gmm.py  plot_estimate_mvn.py  plot_initializations.py  plot_iris.py  plot_iris_from_sklearn.py  plot_kmeansplusplus.py  plot_multimodal_regression.py  plot_regression.py  plot_sample_gmm_confidence_interval.py  plot_sample_mvn_confidence_interval.py  plot_sklearn_learning_curve.py  plot_time_invariant_trajectories.py  plot_trajectories.py  plot_unscented_transform.py
gmr/: __init__.py  gmm.py  mvn.py  sklearn.py  utils.py
gmr/tests/: test_gmm.py  test_mvn.py  test_sklearn.py
paper/: paper.bib  paper.md
tests/: index.html  test_gmm.html  test_mvn.html  test_sklearn.html
